--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "sdc-questions-and-answers",
   "version": "1.0.0",
   "description": "This is the beginning of an epic tale about databases.",
-  "main": "MongooseSchema.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
