--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prettier": "^2.3.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
+    "pg": "^8.7.1"
   }
 }
