--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fast-csv": "^4.3.6",
     "pg": "^8.7.1"
   }
 }
