--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "This is the beginning of an epic tale about databases.",
   "main": "server/index.js",
   "scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"ts:dev": "ts-node-dev server/index.ts",
-		"ts:prod": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ts:dev": "ts-node-dev src/server",
+    "ts:start": "ts-node src/server",
+    "ts:prod": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5",
-    "jest": "^27.0.6"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
