--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the beginning of an epic tale about databases.",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
