--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "ts-node-dev src/server",
-    "start": "ts-node src/server"
+    "start:dev": "ts-node-dev src/",
+    "start": "ts-node src/"
   },
   "keywords": [],
   "author": "",
