--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start:dev": "ts-node-dev src/",
     "start": "ts-node src/"
   },
-  "sourceType": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/pg": "^8.6.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.0",
