--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,18 @@
 {
 	"compilerOptions": {
+		"baseUrl": "./", /* Base directory to resolve non-absolute module names. */
+		"paths": {
+			"src/*": [
+				"./src/*"
+			],
+			"config": [
+				"./config"
+			],
+			"*": [
+				"./node_modules/@types/*",
+				"./types/*"
+			]
+		}, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 		/* Basic Options */
 		"target": "ESNEXT", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
@@ -14,7 +27,7 @@
 		// "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
 		"sourceMap": true, /* Generates corresponding '.map' file. */
 		// "outFile": "./",                       /* Concatenate and emit output to single file. */
-		// "outDir": "./build", /* Redirect output structure to the directory. */
+		"outDir": "./built/*", /* Redirect output structure to the directory. */
 		// "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 		// "composite": true,                     /* Enable project compilation */
 		// "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
@@ -40,12 +53,6 @@
 		// "noUncheckedIndexedAccess": true,      /* Include 'undefined' in index signature results */
 		/* Module Resolution Options */
 		"moduleResolution": "node", /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-		"baseUrl": "./src/", /* Base directory to resolve non-absolute module names. */
-		"paths": {
-			"*": [
-				"*"
-			]
-		}, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
 		// "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
 		// "typeRoots": [],                       /* List of folders to include type definitions from. */
 		// "types": [],                           /* Type declaration files to be included in compilation. */
@@ -66,6 +73,11 @@
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
 	},
 	"include": [
-		"./src/"
+		"./src/**/*"
+	],
+	"exclude": [
+		"./src/db",
+		"./config",
+		"./built/*"
 	],
 }
