--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
 				"./types/*"
 			]
 		}, /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
-		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 		/* Basic Options */
 		"target": "ESNEXT", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
 		"module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
@@ -23,12 +22,9 @@
 			"dom"
 		], /* Specify library files to be included in the compilation. */
 		"allowJs": true, /* Allow javascript files to be compiled. */
-		// "checkJs": true,                       /* Report errors in .js files. */// "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-		// "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
+		// "checkJs": true,                       /* Report errors in .js files. */
 		"sourceMap": true, /* Generates corresponding '.map' file. */
-		// "outFile": "./",                       /* Concatenate and emit output to single file. */
 		"outDir": "./built/*", /* Redirect output structure to the directory. */
-		// "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 		// "composite": true,                     /* Enable project compilation */
 		// "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
 		// "removeComments": true,                /* Do not emit comments to output. */
