Rearranges file structure

--- a/scripts/docker/docker-compose.yml
+++ b/scripts/docker/docker-compose.yml
@@ -1,5 +1,13 @@
-version: "3.9"
+version: '3.9'
 services:
+  node:
+    image: sdc-node
+    container_name: sdc-node
+    ports:
+      - 3000:1234
+    build:
+      context: .
+      dockerfile: node.Dockerfile
   postgres:
     image: sdc-postgres
     container_name: sdc-postgres
