--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest",
     "start:dev": "ts-node-dev src/",
-    "start": "ts-node src/"
+    "start": "ts-node src/",
+    "seed": "sudo su postgres -c 'node ./scripts/buildDB.js | psql -d questions_and_answers -a'",
+    "seed:prod": "cross-env NODE_ENV=production npm run seed"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +17,13 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/pg": "^8.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^27.0.6",
     "morgan": "^1.10.0",
     "prettier": "^2.3.2",
