--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start:dev": "cross-env NODE_ENV=development npm run server:dev",
     "server:dev": "ts-node-dev src/",
-    "start": "ts-node src/",
+    "start": "cross-env NODE_ENV=production && npm run server",
+    "server": "ts-node src/",
     "seed": "./scripts/createDB.bash && sudo su postgres -c 'node ./scripts/buildDB.js | psql -d questions_and_answers -a'",
     "seed:prod": "cross-env NODE_ENV=production npm run seed"
   },
