--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the beginning of an epic tale about databases.",
   "main": "server/index.js",
   "scripts": {
-		"test": "jest",
+    "test": "jest",
     "start:dev": "cross-env NODE_ENV=development npm run server:dev",
     "server:dev": "ts-node-dev src/",
     "start": "cross-env NODE_ENV=production && npm run server",
@@ -35,6 +35,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
